k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ml-service
  template:
    metadata:
      labels:
        app: ml-service
    spec:
      containers:
        - name: ml-service
          image: ml-service:latest
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /docs
              port: 8000

          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
